Commit : Spacing fixes : responsiveness improved : minor changes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,11 @@ header {
     /* min-height: 80vh; */
     border-bottom: var(--main-color) 2px solid;
     padding: 2rem 0;
+    margin: 32px 0;
+}
+
+header:nth-child(1) {
+    margin-top: 0;
 }
 
 header h1 {
@@ -58,11 +63,18 @@ header h2{
     text-align: left;
     margin: auto;
 }
-
+.header-image {
+    display: flex;
+    justify-content: center;
+}
 header img {
     width: 360px;
 }
-
+@media screen and (max-width: 450px) {
+    header img {
+        width: 95%;
+    }
+}
 header .header-links {
     display: flex;
     flex-wrap: wrap;
@@ -102,7 +114,7 @@ header .header-links a:first-child {
     padding: 2rem;
 }
 .bulleted-section b {
-    font-size: 36pt;
+    font-size: 26pt;
 }
 .bulleted-text {
     line-height: 36pt;
@@ -135,24 +147,36 @@ header .header-links a:first-child {
     border: 0.5rem #006571 solid;
 }
 /* video section */
-
+.video-container {
+    width: 70%;
+    margin: 32px auto;
+}
+.video-container:nth-child(1) {
+    margin-top: 0;
+}
 .video-section {
     position: relative;
-    padding-bottom: 30rem;
-    width: 50rem;
-    margin: 2rem auto;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
 }
+.video-section iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: #1F5B65 1rem solid;
+  }
 
-iframe {
+/* iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 50rem;
     height: 30rem;
     border: #1F5B65 1rem solid;
-    /* border-width: 5px !important; */
-}
-@media screen and (max-width:900px) {
+} */
+/* @media screen and (max-width:900px) {
     .video-section {
         width: 45rem;
         padding-bottom: 27rem;
@@ -201,7 +225,7 @@ iframe {
         width: 20rem;
         height: 12rem;
     }
-}
+} */
 
 /* purchase section */
 .purchase-section {
@@ -456,7 +480,7 @@ footer a:hover {
     header h1 {
         text-align: center;
     }
-    .top-text, .intro-text, .bulleted-section, .box-text, .custom-section-1 {
+    .top-text, .intro-text, .bulleted-section, .box-text, .custom-section-1, .video-container {
         width: 95%;
     }
 }
